alignment and logo link fix

--- a/CSS/media.css
+++ b/CSS/media.css
@@ -35,6 +35,10 @@
   .logo {
     align-self: center;
   }
+
+  header a {
+    align-self: center;
+  }
   .footermain-grid {
     display: flex;
     flex-direction: column;
